# secchecker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  dev-setup.bat  dev-setup.sh  pyproject.toml  secchecker_report.json  secchecker_report.xml
.github/workflows/: ci.yml  package-test.yml
sample-reports/: secchecker_report.json  secchecker_report.md  secchecker_report.xml
secchecker/: __init__.py  cli.py  config.py  core.py  devsecops_patterns.py  devsecops_scanner.py  entropy.py  html_reporter.py  llm_patterns.py  llm_scanner.py  patterns.py  reporter.py  sarif_reporter.py  secchecker.py
tests/: test_config.py  test_core.py  test_devsecops_scanner.py  test_entropy.py  test_html_reporter.py  test_llm_scanner.py  test_patterns.py  test_reporter.py  test_sarif_reporter.py
