[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secchecker"
version = "0.1.3"
description = "A CLI tool to detect secrets in repositories for maintaining best security practices."
readme = "README.md"
authors = [
    {name = "Vishnu Prashanth", email = "vishnu7stanite@gmail.com"}
]
license = "MIT"                  # SPDX expression
license-files = ["LICENSE"]
requires-python = ">=3.8"
keywords = ["security", "secrets", "devsecops", "cli", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "click>=8.0"
]

[project.optional-dependencies]
cli = ["rich"]

[project.urls]
Homepage = "https://github.com/vishnu-77/secchecker"
Documentation = "https://github.com/vishnu-77/secchecker#readme"
Repository = "https://github.com/vishnu-77/secchecker.git"
"Bug Tracker" = "https://github.com/vishnu-77/secchecker/issues"
Changelog = "https://github.com/vishnu-77/secchecker/blob/main/CHANGELOG.md"

[project.scripts]
secchecker = "secchecker.cli:main"
