[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secchecker"
version = "0.3.0"
description = "Lightweight security auditing for DevSecOps and AI systems — detects secrets, LLM vulnerabilities, and infrastructure misconfigurations."
readme = "README.md"
authors = [
    {name = "Vishnu Prashanth", email = "vishnu7stanite@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["security", "secrets", "devsecops", "llm-security", "ai-security", "prompt-injection", "terraform", "kubernetes", "cli", "scanning", "audit"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
dependencies = [
    # No external dependencies - using only Python standard library
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "flake8>=3.8",
    "black>=21.0",
    "mypy>=0.800"
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0"
]

[project.urls]
Homepage = "https://github.com/vishnu-77/secchecker"
Documentation = "https://github.com/vishnu-77/secchecker#readme"
Repository = "https://github.com/vishnu-77/secchecker.git"
"Bug Tracker" = "https://github.com/vishnu-77/secchecker/issues"
Changelog = "https://github.com/vishnu-77/secchecker/blob/main/CHANGELOG.md"

[project.scripts]
secchecker = "secchecker.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["secchecker"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]
